--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^2.1.1",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "express-session": "^1.17.2",
     "helmet": "4.6.0",
     "knex": "0.95.14",
+    "knex-cleaner": "^1.3.1",
     "sqlite3": "5.0.2"
   },
   "devDependencies": {
